h3 font fixed and fixed container overlap with footer

--- a/resources/style.css
+++ b/resources/style.css
@@ -54,7 +54,7 @@ h1 {
 	-webkit-border-radius: 4px;
 	padding: 4px 32px 32px 32px;
 	background-color: #fff;
-	margin: 0px 60px 20px;
+	margin: 0px 60px 60px;
 	height: auto;
 }
 .container h1 {
@@ -65,6 +65,10 @@ h1 {
 	font-family: OpenSansB;
 	color: #333;
 	text-align: center;
+}
+.container h3 {
+	font-family: OpenSansB;
+	color: #333;
 }
 .container p {
 		text-align: center;
